package examen;

// CursoRegular.java
public class CursoRegular extends Curso {
    public CursoRegular(String nombre, int duracionSemanas, double precio) {
        super(nombre, duracionSemanas, precio);
    }
}