package examen;

public class Docente {
    private String nombre;
    private String id;

    public Docente(String nombre, String id) {
        this.nombre = nombre;
        this.id = id;
    }

    public String getNombre() {
        return nombre;
    }
}
